# fix_learn

./: README.md
doc/: Fix协议学习笔记.md  QuickFix学习笔记.md  QuickFix源码阅读笔记.md
doc/plantuml/: quickfix会话-与套接字直接交互的类相关的类图.wsd  quickfix会话-中间层相关的类图.wsd  quickfix会话-解析消息层的类图.wsd
examples/quickfix/include/quickfix/: config.h
examples/trade_acceptor/: CMakeLists.txt
examples/trade_acceptor/conf/: fix.ini
examples/trade_acceptor/src/: trade_acceptor.cpp
examples/trade_acceptor/src/application/: application.cpp  application.h
examples/trade_initiator/: CMakeLists.txt
examples/trade_initiator/conf/: FIX42.xml  fix.ini
examples/trade_initiator/src/: trade_initiator.cpp
examples/trade_initiator/src/application/: test_application.cpp  test_application.h
